--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@ let currentEditId = null;
 let currentUser = null;
 
 function togglePostFormBackground(){
-    $('#cntenInput').toggleClass('bg-changed');
+    $('#contentInput').toggleClass('bg-changed');
 }
 
 // メッセージ表示処理
